# anvil

./: .gitignore  Cargo.toml  DESIGN.md  README.md  flake.nix
.github/workflows/: check.yml
anvil/: Cargo.toml
anvil-askama/: Cargo.toml
anvil-askama/src/: append.rs  filters.rs  generate.rs  inject.rs  lib.rs
anvil-askama/src/extensions/: append.rs  generate.rs
anvil-cli/: Cargo.toml  README.md
anvil-cli/src/: lib.rs  main.rs
anvil-cli/templates/: controller.rs  controller_mod.rs  hello.html  test.rs
anvil-derive/: Cargo.toml
anvil-derive/src/: lib.rs
anvil-liquid/: Cargo.toml
anvil-liquid-derive/: Cargo.toml
anvil-liquid-derive/src/: lib.rs
anvil-liquid-derive/tests/: compile_tests.rs  template_derive_test.rs
anvil-liquid-derive/tests/compile_fail/: incorrect_format.rs  invalid_parser.rs  invalid_parser.stderr  missing_attribute.rs  missing_attribute.stderr  missing_path_value.rs
anvil-liquid/src/: lib.rs
anvil-liquid/src/extensions/: append.rs  generate.rs
anvil-minijinja/: Cargo.toml  build.rs
anvil-minijinja-derive/: Cargo.toml  build.rs
anvil-minijinja-derive/src/: lib.rs
anvil-minijinja-derive/tests/: compile_tests.rs  template_derive_test.rs
anvil-minijinja-derive/tests/compile_fail/: incorrect_format.rs  missing_attribute.rs
anvil-minijinja/src/extensions/: generate.rs
anvil-tera/: Cargo.toml
anvil-tera-derive/: Cargo.toml
anvil-tera-derive/src/: lib.rs
anvil-tera-derive/tests/: compile_tests.rs  template_derive_test.rs
anvil-tera-derive/tests/compile_fail/: incorrect_format.stderr  missing_path.rs  missing_path.stderr  missing_tera.stderr
anvil-tera-derive/tests/templates/: conditional.txt  override.txt
anvil-tera/src/: append.rs  generate.rs  inject.rs  lib.rs
anvil-tera/src/extensions/: append.rs  generate.rs
anvil/src/: append.rs  either.rs  filters.rs  generate.rs  inject.rs  lib.rs  mover.rs  remove.rs  render.rs  replace.rs  transform.rs
anvil/src/adapters/: mod.rs
anvil/src/adapters/actix/http/: response.rs
anvil/src/adapters/axum/: mod.rs
anvil/src/adapters/axum/extractors/: mod.rs
anvil/src/adapters/axum/http/: body.rs  request.rs
anvil/src/extensions/: diff.rs
anvil/src/extractors/bytes/: mod.rs  rejection.rs
anvil/src/handler/: mod.rs
anvil/src/http/: request.rs
anvil/src/http/response/: into_response.rs  mod.rs
anvil/src/routes/: routes.rs
backends/askama/anvil-askama/: Cargo.toml
backends/liquid/anvil-liquid/: Cargo.toml
backends/liquid/anvil-liquid-derive/: Cargo.toml
backends/liquid/anvil-liquid-derive/src/: lib.rs
backends/liquid/anvil-liquid-derive/tests/compile_fail/: incorrect_format.stderr  missing_path_value.stderr
backends/liquid/anvil-liquid/src/: lib.rs
backends/liquid/anvil-liquid/src/extensions/: append.rs  generate.rs
backends/minijinja/anvil-minijinja/: Cargo.toml
backends/minijinja/anvil-minijinja-derive/: Cargo.toml  build.rs
backends/minijinja/anvil-minijinja-derive/src/: lib.rs
backends/minijinja/anvil-minijinja-derive/tests/compile_fail/: incorrect_format.stderr  missing_attribute.stderr
backends/minijinja/anvil-minijinja/src/: lib.rs
backends/minijinja/anvil-minijinja/src/extensions/: append.rs  generate.rs
backends/tera/anvil-tera/: Cargo.toml
backends/tera/anvil-tera-derive/: Cargo.toml
backends/tera/anvil-tera-derive/tests/: compile_tests.rs
backends/tera/anvil-tera-derive/tests/compile_fail/: incorrect_format.rs  missing_tera.rs
backends/tera/anvil-tera-derive/tests/templates/: filter.txt
backends/tera/anvil-tera/src/: lib.rs
backends/tera/anvil-tera/src/extensions/: append.rs  generate.rs
examples/: Cargo.toml  axum_generator.rs  build.rs  cli.rs  file_operations.rs  mixed_templates.rs
examples/templates/: controller.rs
examples/templates/axum_generator/: controller.rs  controller_mod.rs  model.rs  model_mod.rs
examples/templates/cli/: controller.rs
examples/templates/mixed_templates/: component.tsx  router.rs  service.ts
output/: README.md
output/src/components/: UserProfile.tsx
output/src/routes/: router.rs
output/src/services/: UserService.ts
src/: lib.rs  macros.rs
src/adapters/actix/extractors/: mod.rs
src/adapters/actix/handler/: mod.rs
src/adapters/actix/http/: body.rs  mod.rs  request.rs  response.rs
src/adapters/actix/middleware/: mod.rs
src/adapters/axum/handler/: mod.rs
src/adapters/axum/http/: body.rs  mod.rs  request.rs  response.rs
src/backends/common/: mod.rs
src/extractors/: mod.rs
src/extractors/json/: mod.rs  rejection.rs
src/handler/: actix.rs  axum.rs  mod.rs
src/http/: body.rs  mod.rs  request.rs  response.rs
src/http/body/: mod.rs  stream_body.rs
src/http/response/: into_response_parts.rs
src/intrinsics/: http.rs
src/request/: mod.rs
src/routes/: handler.rs
tests/: Cargo.toml  anvil_liquid_capabilities_test.rs  anvil_minijinja_capabilities_test.rs  anvil_tera_capabilities_test.rs  build.rs
tests/templates/: append_test.txt  either_fallback.txt  either_primary.txt  generate_test.txt
