[workspace]
resolver = "2"
members = [
  "anvil", 
  "backends/askama/anvil-askama", 
  "backends/liquid/anvil-liquid", 
  "backends/liquid/anvil-liquid-derive", 
  "backends/minijinja/anvil-minijinja", 
  "backends/minijinja/anvil-minijinja-derive", 
  "backends/tera/anvil-tera", 
  "backends/tera/anvil-tera-derive", 
  "examples",
  "tests"
]
