[package]
name = "anvil-liquid-derive"
version = "0.1.0"
edition = "2021"
homepage="https://github.com/anvil-rs/anvil"
description="Anvil derive macro wrapper for the liquid templating library"
license="MIT"
readme="../README.md"
repository="https://github.com/anvil-rs/anvil"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[dev-dependencies]
anvil-liquid = { path = "../anvil-liquid" }
serde = { version = "1.0", features = ["derive"] }
liquid = "0.26.1"
trybuild = "1.0.104"
