[package]
name = "anvil-minijinja"
version = "0.1.0"
edition = "2021"

[dependencies]
anvil = { path = "../anvil" }
minijinja = "2.8.0"
minijinja-embed = "2.8.0"
serde = "1.0.219" 

[dev-dependencies]
tempfile = "3.15.0"

[dev-dependencies.serde]
version = "*"
features = ["derive"]

[build-dependencies]
minijinja-embed = "2.8.0"

