[package]
name = "anvil-minijinja"
version = "0.1.0"
edition = "2021"

[dependencies]
anvil = { path = "../anvil" }
minijinja = "2.8.0"
minijinja-embed = "2.8.0"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
tempfile = "3.15.0"


[build-dependencies]
minijinja-embed = "2.8.0"

