[package]
name = "anvil-tera-derive"
version = "0.1.1"
edition = "2021"
homepage="https://github.com/anvil-rs/anvil"
description="Anvil derive macro wrapper for the tera templating library"
license="MIT"
readme="../README.md"
repository="https://github.com/anvil-rs/anvil"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[dev-dependencies]
anvil-tera = { path = "../anvil-tera" }
serde = { version = "1.0", features = ["derive"] }
tera = { version = "1.20.0" } 
trybuild = { version = "1.0.104" }