[package]
name = "anvil-tera"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
tera = { version = "1.20.0" } 
anvil = { path = "../anvil" }

# For -Zminimal-versions
[target.'cfg(any())'.dependencies]
slug = { version = "0.1.1", optional = true }
pest = { version = "2.7.0", optional = true }

[dev-dependencies]
tempfile = "3.15.0"
