[package]
name = "anvil"
version = "0.2.2"
edition = "2021"
homepage="https://github.com/anvil-rs/anvil"
description="Anvil is a modular templating system for creating user-defined scaffolding systems."
license="MIT"
readme="../README.md"
repository="https://github.com/anvil-rs/anvil"


[dependencies]
askama = "0.12.1"
heck = "0.5.0"
regex = "1.11.1"
thiserror = "2.0.9"

[dev-dependencies]
tempfile = "3.15.0"
