[package]
name = "anvil"
version = "0.3.0"
edition = "2021"
homepage="https://github.com/anvil-rs/anvil"
description="Anvil is a modular templating system for creating user-defined scaffolding systems."
license="MIT"
readme="../README.md"
repository="https://github.com/anvil-rs/anvil"


[dependencies]
thiserror = "2.0.9"

[dev-dependencies]
tempfile = "3.15.0"
