[package]
name = "anvil"
version = "0.3.1"
edition = "2021"
homepage="https://github.com/anvil-rs/anvil"
description="Anvil is a modular templating system for creating user-defined scaffolding systems."
license="MIT"
readme="../README.md"
repository="https://github.com/anvil-rs/anvil"

[dependencies]
diffy = "0.4.2"
thiserror = "2.0.9"
tempfile = "3.15.0"
