[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"
license = "MIT"

[dev-dependencies]
askama = "0.13.0"
clap = { version = "4.5.23", features = ["derive"] }
heck = "0.5.0"
regex = "1.11.1"
anvil = { path = "../anvil" }
anvil-askama = { path = "../anvil-askama" }

[[example]]
name = "cli"
path = "cli.rs"
