[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"
license = "MIT"

[build-dependencies]
minijinja-embed = "2.9.0"

[dev-dependencies]
askama = "0.13.0"
clap = { version = "4.5.23", features = ["derive"] }
heck = "0.5.0"
regex = "1.11.1"
anvil = "0.3.2"
anvil-askama = "0.2.2"
anvil-liquid = "0.3.2"
anvil-minijinja = "0.2.1"
anvil-tera = "0.2.1"
anvil-tera-derive = { path = "../backends/tera/anvil-tera-derive" }
anvil-liquid-derive = { path = "../backends/liquid/anvil-liquid-derive" }
anvil-minijinja-derive = { path = "../backends/minijinja/anvil-minijinja-derive" }
serde = { version = "1.0.219", features = ["derive"] } 
liquid = "0.26.9"
minijinja-embed = "2.9.0"
minijinja = "2.9.0"
tera = "1.20.0"

[target.'cfg(any())'.dependencies]
slug = { version = "0.1.1", optional = true }
pest = { version = "2.7.0", optional = true }
pest_derive = { version = "2.7.0", optional = true}
serde_json = { version = "1.0.11", optional = true }

[[example]]
name = "cli"
path = "cli.rs"

[[example]]
name = "mixed_templates"
path = "mixed_templates.rs"

[[example]]
name = "axum_generator"
path = "axum_generator.rs"

[[example]]
name = "file_operations"
path = "file_operations.rs"
