[package]
name = "anvil-minijinja-derive"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/anvil-rs/anvil"
description = "Anvil derive macro wrapper for the minijinja templating library"
license = "MIT"
readme="../../../README.md"
repository = "https://github.com/anvil-rs/anvil"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[dev-dependencies]
anvil = "0.3.2"
anvil-minijinja = { path = "../anvil-minijinja" }
serde = { version = "1.0", features = ["derive"] }
minijinja = "2.8.0"
minijinja-embed = "2.8.0"
trybuild = "1.0.104"

[build-dependencies]
minijinja-embed = "2.8.0"
